# template-api

./: Cargo.toml  index.html  readme.md
src/: main.rs
src/templating/: routes.rs  utils.rs
templates/: invoiceA4.hbs
