[package]
name = "template-service"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.0"
rand = "0.8.5"
actix-cors = "0.7.0"
parking_lot = "0.12.3"
handlebars = "6.3.2"
# headless_chrome = "1.0.15"
